fix(producttile): component height changes when hint-text node change its border visibility

--- a/packages/ui-shared/src/components/ProductTile/style/ProductTileOptions.less
+++ b/packages/ui-shared/src/components/ProductTile/style/ProductTileOptions.less
@@ -78,12 +78,13 @@
         font-size: 12px;
         line-height: 16px;
         color: @link;
-        border-bottom: 1px dashed;
+        text-decoration: underline;
+        text-decoration-style: dashed;
         font-weight: 400;
         margin: 0 4px 1px 2px;
 
         &:hover {
-            border-bottom: none;
+            text-decoration: none;
         }
     }
 }
